--- a/indexstyle.css
+++ b/indexstyle.css
@@ -24,7 +24,7 @@ a:visited {
   background-color: white;
   width: 30vw;
   opacity: 1.0;
-  position: absolute;
+  position: fixed;
 }
 
 #stars:hover{
@@ -33,9 +33,9 @@ a:visited {
 }
 
 #move{
-  position:absolute;
+  position:fixed;
   top: 400px;
-  right: 200px;
+  right: 350px;
 }
 
 #know{
