--- a/more.css
+++ b/more.css
@@ -12,11 +12,12 @@ p{
 }
 
 a{
-  color:black
+  text-decoration: none;
+  color:gray
 }
 
 a:visited {
-  color:black;
+  color:gray;
 }
 
 #glitch{
@@ -33,4 +34,17 @@ a:visited {
   color: gray;
   width: 100%;
   font-size: 26px;
+}
+
+#memories{
+  opacity: 0;
+  position: fixed;
+  bottom: 275px;
+  color: gray;
+  width: 100%;
+  font-size: 26px;
+}
+
+#memories:hover{
+  opacity: 1;
 }
