--- a/ohhello.css
+++ b/ohhello.css
@@ -15,8 +15,9 @@ p{
 }
 
 a{
+  text-decoration: none;
   color:black
-  position:absolute;
+  position:fixed;
 }
 
 a:visited {
@@ -27,7 +28,7 @@ a:visited {
   background-color: white;
   width: 20vw;
   opacity:1.0;
-  position:absolute;
+  position:fixed;
 }
 
 #uh:hover{
@@ -35,7 +36,7 @@ a:visited {
 }
 
 #glitch{
-  position: absolute;
+  position: fixed;
   bottom: 500px;
   left: 600px;
   opacity: 0;
@@ -47,14 +48,23 @@ a:visited {
 }
 
 #snoop{
-  position: absolute;
+  position: fixed;
   bottom: 345px;
   left: 1225px;
 }
 
 #home{
-  position: absolute;
+  position: fixed;
   bottom:600px;
 }
 
-]
+#explore{
+  opacity: .05;
+  position: fixed;
+  left: 500;
+  bottom: 100;
+}
+
+#explore:hover{
+  opacity: 1;
+}
