--- a/memories.css
+++ b/memories.css
@@ -4,18 +4,54 @@ h1{
 }
 
 body{
+  background-color: #2f7037;
   cursor: grab;
+  font-size: 26px;
+
 }
 
 p{
-  color:gray;
+  color: #fcba03;
+  background-color: black;
+
 }
 
 a{
-  color:black
+  text-decoration: none;
+  color:#fcba03;
 }
 
 a:visited {
   text-decoration: none;
-  color:black;
+  color:#fcba03;
+}
+
+#my{
+  position: fixed;
+  left: 50;
+  top: 50;
+  width: 27vw;
+}
+
+#face{
+  position: fixed;
+  left: 200;
+  top: 200;
+  width: 27vw;
+}
+
+#alone{
+  position: fixed;
+  right: 100;
+  top: 700;
+  width: 20vw;
+}
+
+
+#clouds{
+  position: fixed;
+  right:0;
+  bottom:0;
+  min-width: 100%;
+  min-height: 100%;
 }
