--- a/more.css
+++ b/more.css
@@ -13,11 +13,11 @@ p{
 
 a{
   text-decoration: none;
-  color:gray
+  color:white
 }
 
 a:visited {
-  color:gray;
+  color:white;
 }
 
 #glitch{
@@ -37,14 +37,9 @@ a:visited {
 }
 
 #memories{
-  opacity: 0;
   position: fixed;
   bottom: 275px;
-  color: gray;
+  color: white;
   width: 100%;
   font-size: 26px;
-}
-
-#memories:hover{
-  opacity: 1;
 }
