--- a/index2.css
+++ b/index2.css
@@ -10,22 +10,24 @@ body{
 }
 
 p{
-  color: white;
-  position: absolute;
-  font-size: 40px;
-  top: 750;
-  right: 500;
-}
+    color: white;
+    position: absolute;
+    font-size: 40px;
+    top: 750;
+    right: 650;
+  }
 
-a{
-  text-decoration: none;
-  color:white;
-}
 
-a:visited {
-  text-decoration: none;
-  color:white;
-}
+  a{
+    text-decoration: none;
+    color:white;
+    opacity: 1;
+  }
+
+  a:visited {
+    color: white;
+  }
+
 
 img{
   position: absolute;
