--- a/take.css
+++ b/take.css
@@ -6,9 +6,6 @@ h1{
 
 body{
   cursor: grabbing;
-  background-image: url(dew.jpg);
-  background-size: fill;
-  background-repeat: no-repeat;
 }
 
 p{
@@ -22,4 +19,21 @@ a{
 
 a:visited {
   color:black;
+}
+
+
+#best{
+    position: fixed;
+    left: 350;
+    width: 50vw;
+    top: 100;
+    font-size: 50;
+}
+
+#clouds{
+  position: fixed;
+  right:0;
+  bottom:0;
+  min-width: 100%;
+  min-height: 100%;
 }
